[package]
name = "planning-kit"
authors = ["Kyle Cesare <kcesare@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
float-ord = "0.3"
nalgebra = { version = "0.32", features = [ "rand" ] }
parry3d-f64 = "0.13"
petgraph = "0.6"
rand = "0.8"
rayon = "1.7"
urdf-rs = "0.7"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sampling"
harness = false
